--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -15,6 +15,11 @@
 		<button id="resta" onclick="restar()">Resta</button>
 		<button id="mult" onclick="multiplicar()">Multiplicación</button>
 		<button id="div" onclick="dividir()">División</button>
+		<button id="sqrt" onclick="sqrt()">Raíz cuadrada</button>
+		<button id="exp" onclick="exp()">Exponente</button>
+		<button id="sin" onclick="sin()">Sin</button>
+		<button id="cos" onclick="cos()">Cos</button>
+		<button id="tan" onclick="tan()">Tan</button>
 	</div>
 	<input type="number" id="num2">
 	<h1 id="result"></h1>
